--- a/main.html
+++ b/main.html
@@ -10,7 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<p><b>What is the capital of India?</b></p>
+	<input type="radio" name="captial" id="delhi" value="New Delhi">
+	<label for="delhi">New Delhi</label>
+	<br>
+	<input type="radio" name="captial" id="mumbai" value="Mumbai">
+	<label for="mumbai">Mumbai</label>
+	<br>
+	<blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
 </body>
 
 </html>
