--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 	<input type="radio" name="captial" id="mumbai" value="Mumbai">
 	<label for="mumbai">Mumbai</label>
 	<br>
-	<blockquote>New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
 </body>
 
 </html>
